--- a/PressaoMonitor/app/src/main/AndroidManifest.xml
+++ b/PressaoMonitor/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".view.RegisterArterialPressureActivity"
+            android:label="@string/title_activity_register_arterial_pressure"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
